[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packetforge"
version = "1.0.0"
description = "Elite custom protocol fuzzer & interactive packet crafter"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "textual>=0.50.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
packetforge = "packetforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packetforge*"]
